--- a/style.css
+++ b/style.css
@@ -133,8 +133,12 @@ section {
 }
 
 .image-container {
-  position: relative;
-  background: var(--green);
+  height: 188px;
+  width: 100%;
+  overflow: hidden;
+  background-size: cover;
+  background-position: top;
+  object-fit: contain;
 }
 
 /* profile text*/
@@ -175,7 +179,7 @@ section {
   height: 100%;
   box-shadow: 0px 5px 10px 0px rgb(0 0 0 / 20%);
 
-  background-color: white;
+  background-color: #f7f7f7;
   transition: all 0.3s ease-in-out;
   display: flex;
   flex-direction: column;
